feat: Cria rotas /delete e /edit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=SecurityDB
 server.port=8080
 spring.data.mongodb.uri=mongodb://localhost:27017/users
+spring.main.allow-circular-references=true
